// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-patterns-field Renders \`c-patterns-field\` with custom props 1`] = `
<div
  class="layout c-patterns-field column"
>
  <c-collapse-panel-stub
    outline-color="#ff5252"
    title="Alarm patterns"
  >
    <c-alarm-patterns-field-stub
      disabled="true"
      name="name.alarm_pattern"
      readonly="true"
      required="true"
      value="[object Object]"
      with-type="with-type"
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="#ff5252"
    title="Entity patterns"
  >
    <c-entity-patterns-field-stub
      disabled="true"
      name="name.entity_pattern"
      readonly="true"
      required="true"
      value="[object Object]"
      with-type="with-type"
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="#ff5252"
    title="Pbehavior patterns"
  >
    <c-pbehavior-patterns-field-stub
      disabled="true"
      name="name.pbehavior_pattern"
      readonly="true"
      required="true"
      value="[object Object]"
      with-type="with-type"
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="#ff5252"
    title="Event patterns"
  >
    <c-event-filter-patterns-field-stub
      disabled="true"
      name="name.event_pattern"
      readonly="true"
      required="true"
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="#ff5252"
    title="Total entity patterns"
  >
    <c-entity-patterns-field-stub
      disabled="true"
      name="name.total_entity_pattern"
      readonly="true"
      required="true"
      with-type="with-type"
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="#ff5252"
    title="Service weather patterns"
  >
    <c-service-weather-patterns-field-stub
      disabled="true"
      name="name.weather_service_pattern"
      required="true"
    />
  </c-collapse-panel-stub>
  <div
    class="flex xs12"
  >
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-alert warning"
        style="display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light v-alert__icon"
        >
          priority_high
        </i>
        <div>
          <span>
            The patterns you've defined targets about 0 items. It can affect performance, are you sure ?
          </span>
        </div>
      </div>
    </transition-stub>
  </div>
  <div
    class="layout row justify-end align-center"
  >
    <div
      class="v-messages text-right theme--light error--text"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      >
        <div
          class="v-messages__message"
        >
          At least one pattern has to be defined. Please define filter patterns for rule
        </div>
      </transition-group-stub>
    </div>
    <button
      class="mr-0 ml-4 v-btn v-btn--disabled theme--light primary--text"
      disabled="disabled"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Check filter
      </div>
    </button>
  </div>
</div>
`;

exports[`c-patterns-field Renders \`c-patterns-field\` with default props 1`] = `
<div
  class="layout c-patterns-field column"
>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <div
    class="flex xs12"
  >
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-alert warning"
        style="display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light v-alert__icon"
        >
          priority_high
        </i>
        <div>
          <span>
            The patterns you've defined targets about 0 items. It can affect performance, are you sure ?
          </span>
        </div>
      </div>
    </transition-stub>
  </div>
  <div
    class="layout row justify-end align-center"
  >
    <div
      class="v-messages text-right theme--light"
    >
      <transition-group-stub
        class="v-messages__wrapper"
        name="message-transition"
        tag="div"
      />
    </div>
    <button
      class="mr-0 ml-4 v-btn v-btn--disabled theme--light primary--text"
      disabled="disabled"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Check filter
      </div>
    </button>
  </div>
</div>
`;
